1999-08-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, resource.cc: add ftp:rest-list setting.
	* Job.h, Job.cc: more useful Job::AcceptSig.
	* CmdExec.cc: improve AcceptSig.
	* SleepJob.cc: assign jobno and cmdline to sub-CmdExec.

1999-08-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* modconfig.h: enable proto-ftp module for real.

1999-08-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* ArgV.h, CmdExec.cc: (ArgV::CombineQuoted) new method.
	* commands.cc: fix `at' command to quote the command to execute.
	* lftp.cc: use CombineQuoted.

1999-08-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* FtpListInfo.cc: fix NT listing parser for the case of file name
	  with spaces.

1999-08-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, FindJob.cc, FtpCopy.cc, LsJob.cc, MirrorJob.cc,
	  StatusLine.cc, StatusLine.h, TreatFileJob.cc, XferJob.cc,
	  log.cc, mkdirJob.cc, mvJob.cc: (StatusLine::Clear) new method;
	  use it everywhere, this avoids warning in new gcc.
	  Don't call Clear when Done(), it will be cleared anyway by upper
	  level job (it was race anyway).

1999-08-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* StatusLine.h, StatusLine.cc, XferJob.cc, pgetJob.cc:
	  (StatusLine::GetWidthDelayed) new method; use it to reduce number
	  of ioctl calls.

1999-08-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* LsJob.cc: (NoCache) open with proper mode.
	* HttpDir.cc: handle another listing format.

1999-08-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc, log.cc: declare res_search, vsnprintf if prototypes
	  are missing.

1999-07-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* SignalHook.cc: ignore SIGXFSZ, want to get EFBIG.

1999-07-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: send `Accept: */*', it is needed for some http servers.

1999-07-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: make it compile on sunos551.